Give every module the Java floor its Minecraft version required
KamiCommon advertises 1.8.x support it cannot deliver. On Paper 1.8.8 the plugin
dies in PluginClassLoader with UnsupportedClassVersionError, on the main class,
before anything else loads. The server then reaches Done and runs normally
without it, which is why a false claim survived: loud for one line, then silent.

The floor was self-imposed. One toolchain covered all 31 version modules, so
v1_8_R1, NMS code that predates Java 9, shipped as Java 21 bytecode. Each module
now targets the JVM its own Minecraft version needed: 8 through 1.16.5, 16 for
1.17, 17 to 1.20.4, 21 from 1.20.5, and v_latest tracks 26.x. Verified on the
emitted class files, not the exit code. Every module emits exactly its declared
floor and nothing else.

Reflective dispatch is what makes that possible. Every Provider.provide(int)
returns an abstract type and constructs a subclass, which forces an assignability
check, and the check loads the subclass. So `new Teleporter_LATEST()` in a branch
a 1.8.8 server never takes still stopped that provider loading there. :core now
names no version class at all: each module carries one NmsBundleImpl, reached by
NmsBundles.forModule(String) through a single Class.forName. Inside a module
everything stays an ordinary compile-time call. 189 constructions across 19
dispatch sites moved over, and the version ladders are untouched, because they
encode per-capability breakpoints that differ between capabilities.

Four of those 19 sites were not found by reading provider filenames.
VersionedComponentSerializer, VersionedComponentUtil, WorldEditHook and
WorldGuardHook only turned up in a constant-pool sweep of the shipped jar. The
last two dispatch on the WorldEdit plugin version rather than the Minecraft
version, and they matter most: worldguard-bukkit 7.0.9 is entirely class-file
major 61, so naming WorldGuard7 statically breaks a Java 8 server whether or not
WorldGuard is installed on it.

## The c